# ROS2-Real-Time-Trajectory-Optimization-for-Leo-Rover

./: README.md  Run Instructions.rtf  src_pkg_structure.txt
src/rover_scp/: CMakeLists.txt
src/rover_scp/include/rover_scp/: rover.hpp  rover_model.hpp  scp.hpp
src/rover_scp/src/: rover.cpp  rover_model.cpp  rover_pp_node.cpp  scp.cpp
